--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,70 +6,42 @@
     android:layout_height="match_parent"
     tools:context=".MainActivity">
 
-    <TextView
-        android:id="@+id/resultview"
-        android:layout_width="361dp"
-        android:layout_height="34dp"
-        android:layout_marginTop="32dp"
-        android:textAlignment="center"
-        android:textSize="24sp"
-        app:layout_constraintHorizontal_bias="0.498"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/calculatebutton" />
-
-    <Button
-        android:id="@+id/calculatebutton"
-        android:layout_width="364dp"
-        android:layout_height="48dp"
+    <CheckBox
+        android:id="@+id/cbdrinks"
+        android:layout_width="123dp"
+        android:layout_height="33dp"
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
-        android:layout_marginTop="32dp"
-        android:background="@android:color/holo_red_light"
-        android:fontFamily="@font/aclonica"
-        android:foregroundTint="@android:color/white"
-        android:text="@string/calculate"
-        android:textColor="@android:color/background_light"
-        android:textColorHighlight="@android:color/darker_gray"
-        android:textSize="18sp"
+        android:layout_marginTop="24dp"
+        android:onClick="onCheckBoxClicked"
+        android:text="Drinks"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.483"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/weightOnEarth" />
+        app:layout_constraintTop_toBottomOf="@+id/cbveggies" />
 
-    <EditText
-        android:id="@+id/weightOnEarth"
-        android:layout_width="364dp"
-        android:layout_height="45dp"
+    <CheckBox
+        android:id="@+id/cbveggies"
+        android:layout_width="123dp"
+        android:layout_height="33dp"
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
-        android:layout_marginTop="32dp"
-        android:ems="10"
-        android:fontFamily="@font/aclonica"
-        android:hint="@string/weight_placeholder"
-        android:inputType="textPersonName"
-        android:textAlignment="center"
-        android:textSize="20sp"
+        android:layout_marginTop="24dp"
+        android:text="Veggies"
+        android:onClick="onCheckBoxClicked"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.483"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/titletext" />
+        app:layout_constraintTop_toBottomOf="@+id/cbfruits" />
 
-    <TextView
-        android:id="@+id/titletext"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+    <CheckBox
+        android:id="@+id/cbfruits"
+        android:layout_width="123dp"
+        android:layout_height="33dp"
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
-        android:layout_marginTop="100dp"
-        android:elevation="11dp"
-        android:fontFamily="@font/aclonica"
-        android:text="@string/weight_question"
-        android:textColor="@android:color/holo_red_light"
-        android:textSize="22sp"
+        android:layout_marginTop="48dp"
+        android:text="Fruits"
+        android:onClick="onCheckBoxClicked"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.502"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
-
 </android.support.constraint.ConstraintLayout>
