--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -2,6 +2,7 @@
 <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/mainView"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".MainActivity">
@@ -10,10 +11,10 @@
         android:id="@+id/doggie"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="84dp"
-        android:layout_marginTop="244dp"
+        android:layout_marginStart="56dp"
+        android:layout_marginTop="72dp"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/tapMe"
         app:srcCompat="@mipmap/icon_lg_dog" />
 
     <ImageView
@@ -27,4 +28,24 @@
         app:layout_constraintStart_toEndOf="@+id/doggie"
         app:layout_constraintTop_toTopOf="@+id/doggie"
         app:srcCompat="@mipmap/icon_lg_cat" />
+
+    <Button
+        android:id="@+id/tapMe"
+        android:layout_width="126dp"
+        android:layout_height="147dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="60dp"
+        android:background="?android:attr/textSelectHandle"
+        android:text="Tap Me!!"
+        android:textAlignment="inherit"
+        android:textColor="@android:color/holo_blue_bright"
+        android:textDirection="firstStrong"
+        android:textSize="24sp"
+        android:textStyle="bold"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.498"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
 </android.support.constraint.ConstraintLayout>
