--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,5 @@
     <color name="colorPrimaryDark">#00ACC1</color>
     <color name="colorPrimary">#26C6DA</color>
     <color name="colorAccent">#00B8D4</color>
+    <color name="titleColor">#</color>
 </resources>
