--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -39,10 +39,10 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.504"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/choreid" />
+        app:layout_constraintTop_toBottomOf="@+id/choretitleid" />
 
     <EditText
-        android:id="@+id/choreid"
+        android:id="@+id/choretitleid"
         android:layout_width="243dp"
         android:layout_height="44dp"
         android:layout_marginEnd="8dp"
