--- a/app/src/main/res/layout/list_row.xml
+++ b/app/src/main/res/layout/list_row.xml
@@ -15,7 +15,7 @@
         <android.support.v7.widget.CardView
             android:id="@+id/list_row"
             android:layout_width="match_parent"
-            android:layout_height="120sp"
+            android:layout_height="80sp"
             android:layout_alignParentTop="true"
             tools:layout_editor_absoluteX="8dp"
             tools:layout_editor_absoluteY="0dp"
@@ -26,31 +26,81 @@
                 android:layout_height="match_parent">
 
                 <ImageView
-                    android:id="@+id/logo"
-                    android:layout_width="95dp"
-                    android:layout_height="95dp"
+                    android:id="@+id/listChoreLogo"
+                    android:layout_width="45dp"
+                    android:layout_height="45dp"
                     android:layout_alignParentStart="true"
-                    android:layout_centerVertical="true"
                     android:layout_marginStart="15dp"
-                    app:srcCompat="@mipmap/icon_lg_dog" />
+                    android:layout_marginTop="15dp"
+                    app:srcCompat="@mipmap/ic_launcher_round" />
 
                 <TextView
-                    android:id="@+id/title"
-                    android:layout_width="match_parent"
+                    android:id="@+id/listChoreTitle"
+                    android:layout_marginTop="5dp"
+                    android:layout_marginLeft="10dp"
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_alignTop="@id/logo"
-                    android:layout_toRightOf="@id/logo"
+                    android:layout_toRightOf="@id/listChoreLogo"
                     android:text="TextView"
-                    android:textSize="24sp" />
+                    android:textSize="17sp" />
+
+                <Button
+                    android:id="@+id/deleteId"
+                    android:background="@android:drawable/ic_menu_delete"
+                    android:layout_marginTop="5dp"
+                    android:layout_width="25dp"
+                    android:layout_height="20dp"
+                    android:layout_alignParentRight="true"
+                    android:layout_alignParentTop="true"
+                    android:paddingTop="15dp"/>
+
+                <Button
+                    android:id="@+id/editId"
+                    android:background="@android:drawable/ic_menu_edit"
+                    android:layout_marginTop="5dp"
+                    android:layout_marginRight="5dp"
+                    android:layout_width="25dp"
+                    android:layout_height="20dp"
+                    android:layout_toLeftOf="@id/deleteId"
+                    android:layout_alignParentTop="true"
+                    android:paddingTop="15dp"/>
 
                 <TextView
-                    android:id="@+id/desc"
+                    android:id="@+id/listChoreAssignedto"
+                    android:layout_marginTop="5dp"
+                    android:layout_marginLeft="10dp"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_toRightOf="@id/logo"
-                    android:layout_below="@id/title"
+                    android:layout_toRightOf="@id/listChoreLogo"
+                    android:layout_below="@id/listChoreTitle"
                     android:text="TextView"
-                    android:layout_marginTop="10sp"/>
+                    android:textSize="14sp" />
+
+                <TextView
+                    android:id="@+id/listChoreAssignedby"
+                    android:layout_marginLeft="10dp"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_toRightOf="@id/listChoreLogo"
+                    android:layout_below="@id/listChoreAssignedto"
+                    android:text="TextView"
+                    android:layout_marginTop="5dp"
+                    android:textSize="10sp" />
+
+                <TextView
+                    android:id="@+id/listChoreDate"
+                    android:paddingLeft="10dp"
+                    android:paddingRight="10dp"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_toRightOf="@id/listChoreAssignedby"
+                    android:layout_below="@id/listChoreAssignedto"
+                    android:layout_alignTop="@id/listChoreAssignedby"
+                    android:layout_alignParentRight="true"
+                    android:textAlignment="textEnd"
+                    android:text="TextView"
+                    android:textSize="10sp" />
+
             </RelativeLayout>
 
         </android.support.v7.widget.CardView>
