--- a/app/src/main/res/layout/activity_dashboard.xml
+++ b/app/src/main/res/layout/activity_dashboard.xml
@@ -7,14 +7,12 @@
     tools:context=".activity.activities.DashboardActivity">
 
     <TextView
-        android:id="@+id/textView2"
+        android:id="@+id/dashwelcomtext"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
-        android:layout_marginLeft="8dp"
         android:layout_marginTop="216dp"
         android:layout_marginEnd="8dp"
-        android:layout_marginRight="8dp"
         android:text="TextView"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
